--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,6 +1,6 @@
-%% exercisebank v0.2.3b132 - 2019/03/08
-%% The LaTeX package exercisebank - version v0.2.3 (2019/03/08) build 132
-%% Manual/Documentation for exercisebank.sty
+%% @@PACKAGE @@VERSIONB - @@DATE
+%% The LaTeX package @@PACKAGE - version @@VERSION (@@DATE) build @@BUILD
+%% Manual/Documentation for @@PACKAGE.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
 %% -------------------------------------------------------------------------------------------
@@ -21,30 +21,9 @@
 \usepackage{listofitems}
 \makeatletter
 \def\input@path{{../../docs/}}
-\lstdefinestyle{mydocumentation}{style=tcbdocumentation,
-  classoffset=0,
-  texcsstyle=*\color{blue},
-  moretexcs={arrayrulecolor,draw,includegraphics,ifthenelse,isodd,lipsum,path,pgfkeysalso},
-  classoffset=1,
-  moretexcs={% core
-    makeset,phead,buildset,select,exclude,Trigger,At,translateExBank,exercisebanksetup,exerciseFile
-  },
-  texcsstyle=*\color{Definition}\bfseries,
-  classoffset=0,% restore default
-  }
-\newtcolorbox{marker}[1][]{enhanced,
-    before skip=2mm,after skip=3mm,
-    boxrule=0.4pt,left=5mm,right=2mm,top=1mm,bottom=1mm,
-    colback=yellow!50,
-    colframe=yellow!20!black,
-    sharp corners,rounded corners=southeast,arc is angular,arc=3mm,
-    underlay={%
-      \path[fill=tcbcol@back!80!black] ([yshift=3mm]interior.south east)--++(-0.4,-0.1)--++(0.1,-0.2);
-      \path[draw=tcbcol@frame,shorten <=-0.05mm,shorten >=-0.05mm] ([yshift=3mm]interior.south east)--++(-0.4,-0.1)--++(0.1,-0.2);
-      \path[fill=yellow!50!black,draw=none] (interior.south west) rectangle node[white]{\Huge\bfseries !} ([xshift=4mm]interior.north west);
-      },
-    drop fuzzy shadow,#1}
-  \def\l@macro#1#2{#1\hfill\newline}
+\input{styling}
+\input{preamble}
+\def\l@macro#1#2{#1\hfill\newline}
 \newcommand\macrotable{\hypersetup{linkcolor=black}\@starttoc{mac}\hypersetup{linkcolor=Definition}}
 \newcommand\gh[1]{\href{https://github.com/#1}{@#1}}
 \newcommand\ghURL[1]{\href{https://github.com/#1}{https://github.com/#1}}
@@ -127,12 +106,13 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.3{\\[-0.5em]\footnotesize(build 132)}}}
+\title{{@@PACKAGE - manual\\ @@VERSION{\\[-0.5em]\footnotesize(build @@BUILD)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
- 
-If you found any bugs or want new functionality, to contribute, view the commented source, get latest version of this package or get in touch with me, you can do all of that at \url{https://github.com/Strauman/exercisebank/}. If you have questions of functionality, kindly direct them to the community\\ \url{http://tex.stackexchange.com}. The author is active on this site regularly.
+\input{pretoc}
+
+If you found any bugs or want new functionality, to contribute, view the commented source, get latest version of this package or get in touch with me, you can do all of that at \url{@@GITHUB}. If you have questions of functionality, kindly direct them to the community\\ \url{http://tex.stackexchange.com}. The author is active on this site regularly.
 If you feel up for it, you can always find the latest development version online, and I always need people to test -- it saves me a lot of time!
 \makeatletter
 \if\onethankyou@content\relax\else\par%
@@ -142,173 +122,8 @@ An extra special thanks to \onethankyou@content who really helps out with this p
 \if\testers\relax\else\footxt{People who helped test and make this package better (github users): \testers}\fi
 \tableofcontents
 \clearpage
-\section{Motivation}
-Exercises are saved as separate files containing part problems. These files can be used to make sets, and you can cherry-pick or exclude certain part problems as you see fit. This makes it easier to maintain and keep your exercises flexible as the syllabus changes.
-
-\section{Flow/Moderate start}
-I suspect that working with this package will break you current flow. So let's go throught it.
-
-Most likely you would want to put all your exercises in a folder. To set the default folder, use \refCom{exercisebanksetup}.
-In these examples we use \texttt{exercises/}.
-\begin{dispListing*}{title=exercises/myexercise.tex}
-\begin{intro}
-  This introduces our problem
-\end{intro}
-\begin{problem}
-  This is a partproblem 1,
-  and will be hidden (just wait, you'll see)
-\end{problem}
-\begin{problem}
-  This is a partproblem 2.
-  This will not be hidden, but become part problem a!
-\end{problem}
-\end{dispListing*}
-Let's build all of them first. In the main file, (the one where you include this package):
-\begin{dispListing*}{title=main.tex}
-  \documentclass{article}
-  \usepackage{exercisebank}
-  \exercisebanksetup{exercise directory=exercises}
-  \makeset{myExerciseSet}{myexercise}
-  \begin{document}
-    \buildset{myExerciseSet}
-  \end{document}
-\end{dispListing*}
-This builds the entire set, and adds Problem header and partproblem counters ( (1a) and (1b) ) by default.
-\subsection{Select}
-Now, let's build only the second problem.
-\begin{dispListing*}{title=main.tex}
-  \documentclass{article}
-  \usepackage{exercisebank}
-  \exercisebanksetup{exercise directory=exercises}
-  \makeset{myExerciseSet}{\select{myexercise}{2}}
-  \begin{document}
-    \buildset{myExerciseSet}
-  \end{document}
-\end{dispListing*}
-This should only build the intro and the one exercise you \refCom*{select}ed!
-
-Now, say you want to hide the intro. Well all you have to do in this case is
-make the package treat the intro as a problem in regards to what is \refCom*{select}ed.
-Just add the optional argument \oarg{intro} to \dac{make}. That is switch
-\begin{dispListing}
-\makeset{myExerciseSet}{\select{myexercise}{2}}
-\end{dispListing}
-with
-\begin{dispListing}
-\makeset[intro]{myExerciseSet}{\select{myexercise}{3}}
-\end{dispListing}
-Notice that there are 3 `partproblems' now since we have to count the intro!
-
-\subsection{Exclude}
-But what if you have an exercise with 12 partproblems, and you only want to exclude the 7th partproblem? Well, then \dac{Exclude} is here to rescue the day for you.
-\begin{dispListing}
-  \makeset{myExerciseSet}{\exclude{soManyExercises}{7}}
-\end{dispListing}
-Here it's important to note that the [intro] argument would not make the intros disappear. If we wanted to only exclude the intro from our previous example file \texttt{exercises/myexercise.tex} we would do
-\begin{dispListing}
-\makeset[intro]{myExerciseSet}{\exclude{myexercise}{1}}
-\end{dispListing}
-So we're excluding the partproblem 1. But that's the intro when we send the [intro] optional argument
-
-\subsection{Displaying numbers}
-If you have many part problems, counting the problem numbers can be a real hassle. Just use \dac{ShowNumbers}, and a big number will appear in front of every part problem!
-
-\subsection{Multiple}
-In \dac{makeset} you can just separate exercises with commas! Here is an example:
-
-Let's say you have two files with exercises. One located in \texttt{exercises/circuits/RLC.tex} and one in \texttt{exercises/ohm/ohmsGeneralLaw.tex}, and you want to include partproblem 1 through 5 from \texttt{RLC.tex} and all of the exercises from \texttt{ohmsGeneralLaw.tex}.
-
-\begin{dispListing}
-\makeset{myExerciseSet}{\select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
-\end{dispListing}
-This will divide it up with problem headers. So that what is in the \texttt{RLC.tex}-file will be Problem 1, and \texttt{ohmsGeneralLaw.tex} Problem 2.
-\subsection{Mixnmatch}
-What if you want to make both of them the same exercise? Well, then you pass the [nohead] argument to \dac{makeset}:
-\begin{dispListing}
-\makeset[nohead]{myExerciseSet}{\phead, \select{circuits/RLC}{1,...,5}, ohmsGeneralLaw}
-\end{dispListing}
-The \dac{phead} command makes a problem header. You can pass them as much as you want:
-
-\begin{dispListing}
-\makeset[nohead]{myExerciseSet}{\phead, \select{circuits/RLC}{1,...,5},
-              ohmsGeneralLaw, \phead, someOtherExercise, moreExercises}
-\end{dispListing}
-
-\subsection{Solutions}
-The last thing to cover then is solutions. In your exercise files you just use the solution environment \emph{below} the \refEnv{problem} environment:
-\begin{dispListing}
-\begin{problem}
-Some problem
-\end{problem}
-\begin{solution}
-Solution goes here
-\end{solution}
-\end{dispListing}
-They are hidden by default, so you would have to use \dac{DisplaySolutions} in
-your main file to display them.
-
-\subsection{Using \dac{At}}
-\subsubsection{Making your own front page for a set}
-
-To create your own front page for each set, you could use the \refKey{front page} key:
-\begin{dispListing}
-  \exercisebanksetu{front page={path/to/file.tex}}
-\end{dispListing}\\
-
-To illustrate how the \dac{At} command works, you could use the following command to execute macros \dac{At}\dac{StartBuildset}\brackets{\meta{FrontPageContents}}. Anything you send in to \dac{At}\dac{StartBuildset} will be executed before the first problem starts:
-\begin{dispListing}
-  \At\StartBuildset{
-    \input{myFrontpage}
-  }
-\end{dispListing}
-\subsubsection{Printing the file name beneath the problem header}
-Maybe you want to see what files are what problems. One way to do that is hook into the \dac{At}\dac{VeryBeginProblem} and use \refCom{exerciseFile}.This is the command that the headers call, so anything you put in there will be executed right after the headers.
-
-\begin{dispListing}
-  \At\VeryBeginProblem{
-    \exerciseFile\\
-  }
-\end{dispListing}
-
-Note that the \dac{At}\dac{BeginProblem} is executed \emph{before} the headers.
-
-\subsection{Dynamic figure path}
-Exercisebank automatically allows you to \dac{input} and \dac{includegraphics} from
-the same as exercise is in. E.g. if you have a declared the option
-\begin{dispListing}
-\exercisebanksetup{exercise directory=exercises}
-\end{dispListing}
- and you have a file \texttt{exercises/somedir/myexercise.tex}, you can put a figure in \texttt{exercises/somedir/} or make a directory with the same name as the file \texttt{exercises/somedir/myexercise/}. Then if you put a figure  \texttt{exercises/somedir/myfig.png} or \texttt{exercises/somedir/myexercise/myfig.png} you can just do
-\begin{dispListing}
-  \includegraphics{myfig}
-\end{dispListing}
-
-You can change the root dir by doing \\
-\dac{exercisebanksetup}\brackets{\refKey{figure root directory}=figures}. See the \refKey{figure root directory} key for more info.
-
-\subsection{Points and tags for exercises}
-By default since version v0.2.1 there are now points and tags available through the \refCom{nextproblem} command.%
-To assign a points to a part problem you'd do
-\begin{dispListing}
-  \nextproblem{points=3,tag=difficult}
-  \begin{problem}
-    This problem is worth 3 points and has the `difficult' tag.
-  \end{problem}
-\end{dispListing}
-Then to build all exercises that has the `difficult' and e.g. the `easy' tag one would use the \refCom{buildtags} command.
-\begin{dispListing}
-  \makeset{myExerciseSet}{ohmsGeneralLaw}
-  \buildtags{dificult,easy}{myExerciseSet}
-\end{dispListing}
-
-
-That covers the basics. Enjoy
-\begin{marker}
-\dac{begin}\{problem\},\dac{end}\{problem\},\\
-\dac{begin}\{solution\},\dac{end}\{solution\},\\
-\dac{begin}\{intro\} and \dac{end}\{intro\} has to be on their own line without any spaces!
-\end{marker}
- \section{Reference}
+\input{intro}
+\section{Reference}
 \filbreak\subsection{Environments}
  \addcontentsline{toc}{subsubsection}{\refEnv{intro}}
 \addcontentsline{toc}{subsubsection}{\refEnv{problem}}
@@ -320,7 +135,7 @@ That covers the basics. Enjoy
 Turns on the solutions, so they are shown.
 \end{docCommand}
 \begin{docCommand}{SolutionsOnly}{}\addcontentsline{toc}{subsubsection}{\refCom{SolutionsOnly}}
-\defnew{v0.2.3\\2019/03/08 }
+
 Displays only solutions (if there are any) to the part problem
 \end{docCommand}
 \begin{docEnvironment}{problem}{}
@@ -335,7 +150,7 @@ Sometimes you'd want to introcude your exercises and tell a little bit about it.
 \end{docEnvironment}
 \filbreak\subsection{Making sets}
 \begin{docCommand}{makesetdefaults}{\marg{nohead|intro}}\addcontentsline{toc}{subsubsection}{\refCom{makesetdefaults}}
-\defnew{v0.2.1\\2018/09/24 }
+
  Sets the default arguments to all makeset-keys.
 e.g.
 \begin{dispListing}
@@ -361,7 +176,7 @@ However, you can override this;
  This is a command that is used by sprite to determine what sets are shown in sprite. If this is not given, sprite uses all sets given in \dac{makset}
 \end{docCommand}
 \begin{docCommand}{makeset}{\oarg{intro,nohead}\marg{filable}}\addcontentsline{toc}{subsubsection}{\refCom{makeset}}
-\updated{v0.2.0\\2018/07/21 }
+
  This command is the one you use to make a set! Later you use \dac{buildset} to build the sets you make. The \meta{filable} argument is either the name of the file relative to the \dac{setExercisesDir}-path (default is nothing, so it's in the root path), or you could use the \dac{select} or \dac{exclude} to  respectively cherry pick or exclude exercises. (See their docs).\\
  \oarg{intro} this counts the intro environment as a part problem, so that you can \dac{select} or \dac{exclude} the intro\\
  \oarg{nohead} prevents the builder from adding a problem header. This is handy if you want to create an exercise that is composed of multiple parts. You can use the \dac{phead} to insert the problem header where you want it
@@ -375,17 +190,17 @@ This contains information about an exercise set. It is intended to be on the top
 exercise, explaining short what the exercise is about. It's only visible when using \dac{sprite}
 \end{docCommand}
 \begin{docCommand}{buildall}{}\addcontentsline{toc}{subsubsection}{\refCom{buildall}}
-\defnew{v0.2.3\\2019/03/08 }
+
  Build all sets defined with \dac{makeset}
 \end{docCommand}
 \begin{docCommand}{sprite}{\oarg{PiP}}\addcontentsline{toc}{subsubsection}{\refCom{sprite}}
-\updated{v0.1.1\\2018/04/13 }
+
  This is a way to visualize all exercises. It takes one optional argument which is how many pages
  inside one page. Defaults to 4
  \begin{marker}If \dac{sprite} is used, it should be the only command in \dac{begin}\{document\}\dac{end}\{document\}\end{marker}
 \end{docCommand}
 \begin{docCommand}{exec}{\marg{macros}}\addcontentsline{toc}{subsubsection}{\refCom{exec}}
-\updated{v0.2.1\\2018/09/24 }
+
 You can use this in \dac{makeset} to execute commands between problems.
 E.g. to insert a new page in between two problems when using nohead:
 \begin{dispListing}
@@ -393,7 +208,7 @@ E.g. to insert a new page in between two problems when using nohead:
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{DeclareExerciseCommand}{\marg{command}\oarg{numargs}\marg{actions}}\addcontentsline{toc}{subsubsection}{\refCom{DeclareExerciseCommand}}
-\updated{v0.2.1\\2018/09/24 }
+
 Now, use similar to newcommand. Does not support default arguments yet, but plans to.
 The old way of defining still works:
 \begin{dispListing}
@@ -416,17 +231,17 @@ This can be used later in makesets. E.g.
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{exclude}{\marg{exerciseFileName}\marg{Comma separated numbers}}\addcontentsline{toc}{subsubsection}{\refCom{exclude}}
-\updated{v0.2.0\\2018/07/21 }
+
 As you can see in the intro section of the documentation, this is for excluding partproblems
 To be used in \refCom{makeset}
 \end{docCommand}
 \begin{docCommand}{select}{\marg{exerciseFileName}\marg{Comma separated numbers}}\addcontentsline{toc}{subsubsection}{\refCom{select}}
-\updated{v0.2.0\\2018/07/21 }
+
 As you can see in the intro section of the documentation, this is for cherry picking partproblems
 To be used in \refCom{makeset}
 \end{docCommand}
 \begin{docCommand}{buildset}{\oarg{intro|nohead|nointro}\marg{setname}}\addcontentsline{toc}{subsubsection}{\refCom{buildset}}
-\updated{v0.2.3\\2019/03/08 }
+
 This command runs the set given. The set has do be defined by \dac{makeset}. E.eg
 \begin{dispListing}
 \makeset{myExerciseSet}{exercisefile1, \select{exercisefile2}{1,2}}
@@ -451,14 +266,14 @@ The following example prints "Exercise set number 1" and "Exercise set number 2"
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildsets}{\oarg{intro|nohead|nointro}\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{buildsets}}
-\updated{v0.2.1\\2018/09/24 }
+
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{set,set2,set3}
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildtags}{\marg{tagslist}\marg{setslist}}\addcontentsline{toc}{subsubsection}{\refCom{buildtags}}
-\updated{v0.2.2\\2018/10/04 }
+
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{tag,tag2,tag3}{set,set2,set3}
@@ -469,11 +284,11 @@ This command will generate multiple sets:
 Labels a partproblem. You can reference to it later using \dac{ppref}\{\meta{label\}}
 \end{docCommand}
 \begin{docCommand}{ppref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{ppref}}
-\updated{v0.2.0\\2018/07/21 }
+
 Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1c)
 \end{docCommand}
 \begin{docCommand}{ppgref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{ppgref}}
-\defnew{v0.2.3\\2019/03/08 }
+
 Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This can be used for \emph{global} exercises.
 \end{docCommand}
 \begin{docCommand}{pref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{pref}}
@@ -481,35 +296,44 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This can be us
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1
 \end{docCommand}
 \begin{docCommand}{pgref}{\marg{label}}\addcontentsline{toc}{subsubsection}{\refCom{pgref}}
-\defnew{v0.2.3\\2019/03/08 }
+
  Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.g. 1, but have global search.
 \end{docCommand}
 \begin{docCommand}{HideTags}{\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{HideTags}}
-\updated{v0.2.3\\2019/03/08 }
+
 Hide all exercises containing the list of tags when building a set.
 \end{docCommand}
 \begin{docCommand}{ShowAllTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowAllTags}}
-\defnew{v0.2.3\\2019/03/08 }
+
 Reset tags set by \dac{HideTags}
+\end{docCommand}
+\begin{docCommand}{exercisenote}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisenote}}
+
+ Adds a note below an exercise header. To be used in \dac{makeset}
+\begin{dispListing}
+ \makeset{\exercisenote{This is a pretty hard exercise}, my/hard/exercise}
+\end{dispListing}
+ Here the text inside \dac{exercisenote} (This is a pretty hard exercise) will show
+ right below the problem header of my/hard/exercise.tex
 \end{docCommand}
 \filbreak\subsection{Configuration and options}
 You can do a lot of configurations on this package, and probably
  even more to come in later versions!
 \begin{docCommand}{ShowNumbers}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowNumbers}}
-\updated{v0.2.1\\2018/09/24 }
+
  Shows the numbers in fron of the part problems and intros that should be used with
  \dac{exclude} and \dac{select}
 \end{docCommand}
 \begin{docCommand}{ShowTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowTags}}
-\updated{v0.2.3\\2019/03/08 }
+
  Shows the tags in front of the part problems much like \dac{ShowNumbers}
 \end{docCommand}
 \begin{docCommand}{ShowFilenames}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowFilenames}}
-\updated{v0.2.3\\2019/03/08 }
+
  Shows the path+filename to the current exercise file
 \end{docCommand}
 \begin{docCommand}{exercisebanksetup}{\marg{\oarg{key/values}}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
-\updated{v0.2.1\\2018/09/24 }
+
  Here is a list of the different keys and their meaning
 \keyDef{part problems}{On/Off}{On}{
  This is whether or not to do part problems. E.g. 1a), 1b) etc.
@@ -619,7 +443,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options: points and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\updated{v0.2.3\\2019/03/08 }
+
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -673,12 +497,12 @@ Here are the \dac{nextproblem} keys:
 Contains the total number of points for all exercises in the current set
 \end{docCommand}
 \begin{docCommand}{exercisepoints}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisepoints}}
-\defnew{v0.2.3\\2019/03/08 }
+
  Contains the total number of points in the current exercise (or "Problem")
 \end{docCommand}
 \filbreak\subsection{Triggers}
 \begin{docCommand}{Trigger}{\marg{Any Macro}}\addcontentsline{toc}{subsubsection}{\refCom{Trigger}}
-\updated{v0.2.1\\2018/09/24 }
+
  See \refCom{At}\\
  Available triggers:\\
 \dac{Trigger}\dac{PartProblemHeaderSuffix}:\\ Triggers after the part problem header.
@@ -723,16 +547,16 @@ where the package should be looking for exercises. Default is the same directory
  else executes \meta{False}
 \end{docCommand}
 \begin{docCommand}{exercisebankversion}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisebankversion}}
-\defnew{v0.2.3\\2019/03/08 }
+
  Prints the current version and build to the error log
 \end{docCommand}
 \begin{docCommand}{exercisebankbuild}{}\addcontentsline{toc}{subsubsection}{\refCom{exercisebankbuild}}
-\defnew{v0.2.3\\2019/03/08 }
+
  Prints the current build number to the error log
 \end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
 \begin{docCommand}{At}{\marg{AnyMacro}}
-\updated{v0.2.1\\2018/09/24 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
+Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
 \begin{dispListing}
  \At\BeginSomething{DoSomething}
  Which is triggered with
@@ -740,7 +564,7 @@ This package also includes some extra stuff. For example the \dac{At} and \dac{T
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{@rigid}{}\addcontentsline{toc}{subsubsection}{\refCom{@rigid}}
-\defnew{v0.2.3\\2019/03/08 }
+
 Used to make \dac{At} so that the contents won't be deleted
 with \dac{ClearHook}. Note that the necessary hooks might not be
  registered as rigid. Thus show caution when deleting hooks
@@ -817,6 +641,7 @@ Distance above Problem \# header
 \addcontentsline{mac}{macro}{\refCom{exercisebankbuild}}{}
 \addcontentsline{mac}{macro}{\refCom{exercisebanksetup}}{}
 \addcontentsline{mac}{macro}{\refCom{exercisebankversion}}{}
+\addcontentsline{mac}{macro}{\refCom{exercisenote}}{}
 \addcontentsline{mac}{macro}{\refCom{exercisepoints}}{}
 \addcontentsline{mac}{macro}{\refCom{introOutdent}}{}
 \addcontentsline{mac}{macro}{\refCom{makeset}}{}
@@ -848,103 +673,5 @@ Distance above Problem \# header
 
 % \newgeometry{lmargin=0.7cm}
 \section{Changelog}
-%!TEX root = exercisebank-doc.tex
-\newversion{v0.0.2b11 2018/04/02}
-  \change{Updated documentation syntax.}
-\newversion{v0.0.3b38 2018/04/03}\nobreak
-    \change{Updated triggers doc}
-    \change{added trigger \dac{VeryBeginPartproblem}}
-
-\newversion{v0.0.3b40 2018/04/03}
-    \change{Added examples that uses the \refCom{At} command.}
-    \change{Making front page and other snacks}
-
-\newversion{v0.0.4b44 2018/04/03}
-    \change{Changed design of part problems. (Looks much better now!)}
-
-\newversion{v0.0.5b46 2018/04/03}
-    \change{Fixed partproblems and solutions to fit on pages using \dac{filbreak}.}
-
-\newversion{v0.1.0 2018/04/08}
-    \change{Fixed title of documentation to match actual package.}
-    \change{Fixed weird paragraph styling when displaying solutions}
-    \change{Added a few package options. More to come!}
-
-\newversion{v0.1.1 2018/04/13}
-  \change{Added \refCom{exec}, which allows the user to execute macros between problems}
-  \change{Bug fix: \refCom{At} would cause crash due to latexmk multiple builds}
-  \change{Bug fix: \refCom{sprite} wouldn't build correctly}
-  \change{Bug fix: misc bugs involving \refCom{makeset}, \refCom{buildset}, nohead and \refCom{phead}}
-
-\newversion{v0.1.2 2018/04/17}
-    \change{Fixed bug that \refCom{select} and \refCom{exclude} not working as expected.}
-    \change{Added \refCom{ShowNumbers} for displaying numbers related to use in \refCom{select} and \refCom{exclude}}
-
-\newversion{v0.1.3 2018/04/20}
-    \change{Added custom dynamic figure path \refKey{figure root directory}.}
-    \change{Fixed bugs related to \refCom*{phead} and the commands used in \refCom{makeset}-lists.}
-\newversion{V0.1.4 2018/04/28}
-    % \change{Introduced solutions only: \refCom{SolutionsOnly}}
-    \change{Updated margins a lot!}
-    \change{Fixed sneaky space in translation}
-    \change{Fixed paragraph tightening when displaying solutions}
-    \change{Introduced \refCom{DeclareExerciseCommand}}
-    \change{Fixed bug with \refCom{exec}}
-    \change{Iteration over items now uses a more lighweight approach.}
-    \change{For commands that takes `lists' as arguments (\refCom{makeset}, \refCom{select} and \refCom{exclude}), the last item of the list can be terminated with new line or spaces without problems.}
-    \change{For commands that takes `lists' as arguments, the entries in the list are now trimmed whitespaces on both sides.}
-\newversion{v0.2.0 2018/07/21}
-    \change{Fixed bug where \refCom{ppref} did not reference letter in part problem.}
-    \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
-    \change{Ability to add front page with the \refKey{front page} setup-key.}
-    \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{v0.2.1 2018/09/24}
-    \change{Added options for individual part problems using the \dac{nextproblem}-command}
-    \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
-    \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
-    \change{Fixed \dac{exec} so that it now can take paragraphs (made it \dac{long})}
-    \change{Added point system}
-    \change{Fixed bug where vertical space would remain when intro environment hidden}
-    \change{\dac\DeclareExerciseCommand~now takes args}
-    \change{Keys sent to \dac\makeset can now be sent to \dac\buildset~and~\dac\buildsets}
-    \change{Introducing \dac\makesetdefaults}
-\newversion{v0.2.2 2018/10/04}
-    \change{Made trailing commas ignored in all lists (\dac\makeset,\dac\buildset,\dac\select,\dac\exclude, etc.)}
-    \change{Fixed bug where tags wouldn't hide.}
-\newversion{v0.2.3 2019/03/08}
-    \change{Added possibility of custom part problem header from \dac\nextproblem}
-    \change{Added possibility of showing problem only when \dac\DisplaySolutions active}
-    \change{Corrected use of the length \dac\ppMarginBelow}
-    \change{Fixed bug where \dac\phead and \dac\ShowFilenames crash}
-    \change{Introduced \dac\SolutionsOnly}
-    \change{Fixed bug where part problem header repeats if solution is itemize.}
-    \change{Introduced the \dac\@rigid command for the \dac\At functionality. Also the \dac\ClearHook for deleting a hook}
-    \change{\dac\buildset now gives error if set does not exist.}
-    \change{Made \dac\HideTags cummulative.}
-    \change{Created \dac\ShowAllTags for clearing tags list}
-    \change{Raises error when pdfTeX(or pdfLaTeX) is not used}
-    \change{Allow underscore for files in \dac\makeset}
-    \change{Added \dac\exercisepoints for getting total number of points in an exercise/problem.}
-    \change{added \dac\pgref and \dac\ppgref}
-    \change{Margins now more manageable}
-    \change{Prevent overwriting of \dac\graphicspath}
-    \change{Set (append) to \dac\input@path no matter what.}
-    % \change{Fixed bug where part problem headers showing weird if problem started with envs. like enumerate or a figure.}
-    \change{Added command \dac\buildall to build all sets}
-    \change{Moved tag placement for when \dac\ShowTags active}
-    \change{Adjusted margins.}
-    \change{Activated \dac\ppMarginAbove (it now does something)}
-    \change{Added \dac\exercisebankversion and \dac\exercisebankbuild}
-    \change{Part problem header now showing if only one part problem is displayed}
-    \change{Possibility to toggle whether part problem header showing if only one part problem is displayed \refKey{show lonely part problems}}
-    % \change{Removed docs for \orderedselect since it's not implemented yet}
-    \change{Fixed TeX capacity exceeded error for long exercises.}
-    \change{Added \dac\thisfilepath for getting path of current exercisefile}
-\chlogtable
-
-
-% Testers and thanks
-\tester{\gh{thorstengrothe}}
-\onethankyou{\gh{tristelune1}}
-% \thankyou{}
- \end{document}
+\input{changelog}
+\end{document}
