--- a/release/exercisebank.sty
+++ b/release/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.3 (2019/03/08) - build 132
+%% The LaTeX package exercisebank - version v0.2.3 (2019/03/08) - build 133
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -15,7 +15,7 @@
 %% This work consists of all files listed in README
 \ProvidesPackage{exercisebank}[2019/03/08 v0.2.3 Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\def\exercisebankversion{v0.2.3 - Build 132}
+\def\exercisebankversion{v0.2.3 - Build 133}
 \PackageWarningNoLine{exercisebank-v0.2.3}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
@@ -205,8 +205,8 @@
 \newtoks\everypar
 \oldep{\the\everypar\@AtNextParHook\relax\gdef\@AtNextParHook{}}
 \def\AtNextPar#1{\g@addto@macro\@AtNextParHook{#1}}
-\gdef\exercisebankversion{\PackageWarningNoLine{exercisebank}{Version v0.2.3b132}}
-\gdef\exercisebankbuild{\PackageWarningNoLine{exercisebank}{Build 132}}
+\gdef\exercisebankversion{\PackageWarningNoLine{exercisebank}{Version v0.2.3b133}}
+\gdef\exercisebankbuild{\PackageWarningNoLine{exercisebank}{Build 133}}
 \edef\@isTrue{1}
 \edef\@isFalse{0}
 \gdef\ShowNumbers{\gdef\@displayMetaCounter{\isTrue}}
@@ -1006,3 +1006,20 @@ reset to default/.code=\pgfkeysalso{/exbank/problems/default/.style={initial sty
 }
 \gdef\HideTags#1{\xdef\exb@hidetaglist{\unexpanded\expandafter{\exb@hidetaglist},#1}}
 \gdef\ShowAllTags{\gdef\exb@hidetaglist{}}
+\global\let\@exercisenote\@nil%
+\gdef\@addExercisenote#1{%
+	\ifx\@exercisenote\@@nil%
+	\gdef\@exercisenote{#1}%
+	\else
+	\g@addto@macro{\@exercisenote}{\par#1}
+\fi
+}
+\At\VeryBeginProblem{%
+\ifx\@exercisenote\@@nil\else%
+\begingroup\list{}{\leftmargin-\introOutdent}\item[]%
+\@exercisenote%
+\endlist\endgroup%
+\global\let\@exercisenote\nil%
+\fi%
+}
+\DeclareExerciseCommand\exercisenote[1]{\@addExercisenote{#1}}
